# git-keeper

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  git-keeper-entrypoint.sh  git-keeper.py  gql-queries.py  gql_queries.py  pyproject.toml  repolist  repos.py  repos.sh  requirements.txt  run.sh  tox.ini
.tekton/: git-keeper-master-pull-request.yaml  git-keeper-master-push.yaml
dockerfiles/: Dockerfile  Dockerfile.test
